objects/Sales_Invoice_Job_Task__c/Sales_Invoice_Job_Task__c.object-meta.xml
<CustomObject>
    <label>Sales Invoice Job Task</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoice Job Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>