objects/Sales_Invoice_Job_Task__c/fields/Billing_Pct__c.field-meta.xml
<CustomField>
    <fullName>Billing_Pct__c</fullName>
    <label>Billing %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>