objects/Sales_Invoice_Job_Task__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Task-Based</fullName>
                <isActive>false</isActive>
                <label>Task-Based</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>