objects/Sales_Invoice_Job_Task__c/fields/Fixed_Price_Surcharge_Option__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Surcharge_Option__c</fullName>
    <label>Fixed Price Surcharge Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Price Does Not Include Surcharge</fullName>
            </value>
            <value>
                <fullName>Fixed Price Includes Surcharge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>