objects/Sales_Invoice_Job_Task__c/fields/Invoice_Format__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Format__c</fullName>
    <label>Invoice Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>By Date by Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>