objects/Sales_Invoice_Job_Task__c/fields/Print_Order__c.field-meta.xml
<CustomField>
    <fullName>Print_Order__c</fullName>
    <label>Print Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>