objects/Sales_Invoice_Job_Task__c/fields/Sales_Order_Job_Task__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Job_Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order Job Task</label>
    <referenceTo>Sales_Order_Job_Task__c</referenceTo>
    <relationshipLabel>Sales Invoice Job Tasks</relationshipLabel>
    <relationshipName>Sales_Invoice_Job_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>