objects/Sales_Invoice_Job_Task__c/fields/Tax_Group__c.field-meta.xml
<CustomField>
    <fullName>Tax_Group__c</fullName>
    <label>Tax Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>TX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>